# WebRZD

./: .gitignore  .gitmodules  app.py  pyproject.toml
static/css/: history.css  postomat-status.css  put-documents.css
templates/: history.html  index.html  put_documents.html  scan_documents.html
