[project]
name = "webrzd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask[async]>=3.1.2",
    "postomat-client",
    "requests>=2.32.5",
]

[tool.uv.workspace]
members = [
    "postomat-client",
]

[tool.uv.sources]
postomat-client = { workspace = true }
